# service/api/uncommentphoto.go
@@ -2,25 +2,23 @@ package api
 
 
 import (
-	"encoding/json"
+	//"encoding/json"
 	"net/http"
 	
 	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
-	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/database"
+	//"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/database"
 )
 
 //etHelloWorld is an example of HTTP endpoint that returns "Hello world!" as a plain text
 func (rt *_router) unCommentPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	var comm database.Comment
+	comm :=ps.ByName("commentId")
 	id:=ps.ByName("UserId")
+	ph:=ps.ByName("photo")
 	
-	err := json.NewDecoder(r.Body).Decode(&comm)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-	err = rt.db.DelComment(id,comm)
+	
+	
+	err := rt.db.DelComment(id,comm,ph)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
