# service/api/unlikepost.go
@@ -2,24 +2,21 @@ package api
 
 
 import (
-	"encoding/json"
+	//"encoding/json"
 	"net/http"
 	
 	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
-	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/database"
+	//"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/database"
 )
 
 //etHelloWorld is an example of HTTP endpoint that returns "Hello world!" as a plain text
 func (rt *_router) unLikePost(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	var lk database.Like
+	lk := ps.ByName("likeId")
 	id := ps.ByName("UserId")
-	err := json.NewDecoder(r.Body).Decode(&lk)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-	err = rt.db.DelLike(id, lk)
+	ph:= ps.ByName("photo")
+	
+	err := rt.db.DelLike(id, lk,ph)
 
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
